<resources>
    <string name="app_name">SignUpForm</string>
    <string name="action_settings">Settings</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">Cancel</string>
    <string name="username_label">Username:</string>
    <string name="username_input">Please enter your username</string>
    <string name="password_label">Password:</string>
    <string name="password_input">Please enter your password</string>
    <string name="confirm_label">Confirm password:</string>
    <string name="confirm_input">Please confirm your password</string>
</resources>
